# computer_science

./: .gitattributes  .gitignore  README.md
hw/ans/: README.md
hw/class/c1/: class1.txt
hw/code/: CMakeLists.txt
hw/code/hw1/: CMakeLists.txt
hw/code/hw1/Inc/: IEEE.h
hw/code/hw1/Src/: IEEE.c  main.c
hw/code/hw2/: CMakeLists.txt  linked_list.c  linked_list.h  main.h
hw/code/hw2/Inc/: linked_list.h
hw/code/hw2/Src/: linked_list.c
hw/code/hw3/: CMakeLists.txt  ackermann.c  fun.c  stack.c  stack.h
hw/code/hw3/Inc/: fun.h
hw/code/hw4/: CMakeLists.txt
hw/code/hw4/Inc/: set.h
hw/code/hw4/Src/: main.c  set.c
hw/code/hw5/: CMakeLists.txt
hw/code/hw5/Inc/: binary_tree.h
hw/code/hw5/Src/: binary_tree.c  main.c
hw/code/hw6/: CMakeLists.txt
hw/code/hw6/Inc/: AGraph.h
hw/code/hw6/Src/: AGraph.c  main.c
hw/code/hw7/: README.md  test.c
hw/code/hw8/: CMakeLists.txt
hw/code/hw8/Inc/: AVL.h  AVL2.h
hw/code/hw8/Src/: AVL.c  AVL2.c  main.c
hw/code/hw_t1/: CMakeLists.txt
hw/code/hw_t1/Inc/: linked_list.h
hw/code/hw_t1/Src/: linked_list.c
hw/code/hw_t2/: CMakeLists.txt
hw/code/hw_t2/Inc/: queue.h  stack.h
hw/code/hw_t2/Src/: queue.c  stack.c
hw/code/hw_t3/: CMakeLists.txt
hw/code/hw_t3/Inc/: recursive.h
hw/code/hw_t3/Src/: recursive.c
hw/code/hw_t4/: CMakeLists.txt
hw/code/hw_t4/Inc/: binary_tree.h
hw/code/hw_t4/Src/: binary_tree.c  main.c
hw/hw/hw1/: README.md
hw/hw/hw2/: main.c  林佳胜_PB24511997_hw2.txt
hw/hw/hw3/: ackermann.h  linked_list.c  linked_list.h  main.c  林佳胜_PB24511997_hw3.txt
hw/requirements/: 2025.10.22zuoye.docx  2025.10.29zuoye.docx  2025.11.26zuoye.docx  2025.12.10zuoye.docx  2025.12.3zuoye.docx  2025.9.10zuoye.docx  2025.9.24zuoye.docx  2025.9.29zuoye.docx  ~$25.11.12zuoye.docx
lab/Lab1/ans/: lab1.asm
lab/Lab1/ans/report/: lab1.txt
lab/Lab1/include/: Game.h  GameBoard.h  GameRender.h  InputHandler.h
lab/Lab1/src/: Game.cpp  GameBoard.cpp  GameRender.cpp  InputHandler.cpp  main.cpp
lab/Lab2/ans/: lab2.asm  test.py
lab/Lab2/ans/report/: lab2.txt
lab/Lab2/include/: directory.h  queue.h  stack.h  unordered_set.h
lab/Lab2/src/2_Expression/: calculator.cpp  calculator.h  main.cpp
lab/Lab2/src/3_Robot/: main.cpp  walk.cpp  walk.h
lab/Lab3/BinaryTree/include/: BinaryTree.h  HuffmanTree.h
lab/Lab3/BinaryTree/src/: BinaryTree.cpp  ExpressionBinaryTree.cpp  HuffmanTree.cpp
lab/Lab3/ans/: lab3.asm
lab/Lab3/ans/report/: lab3.txt
lab/Lab3/graph/include/: dijkstra.h  graph.h
lab/Lab3/graph/src/: dijkstra.cpp  graph.cpp  main.cpp
lab/Lab4/ans/: lab4.asm  tempCodeRunnerFile.py  test.py
lab/Lab4/ans/report/: lab4.asm  lab4.md
lab/Lab5/ans/report/: lab5.asm  lab5.md
lab/Lab6/ans/: README.md  lab1.c  lab2.c  lab3.c  lab4.c
lab/LabA&S/: CMakeLists.txt
lab/LabA&S/Inc/: assembler.h  lc3_vm.h  types.h  utils.h
lab/LabA&S/Src/: assembler.cpp  lc3_vm.cpp  main.cpp
lab/LabA_S/: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate_config.py  test_asm.py  test_runner.py  test_sim.py
lab/LabA_S/config/: test_asm.toml  test_integ.toml  test_sim.toml  test_sim_config.toml
lab/LabA_S/include/: types.h  utils.h
lab/LabA_S/include/assembler/: assembler.h
lab/LabA_S/include/common/: utils.h
lab/LabA_S/include/simulator/: lc3_vm.h
lab/LabA_S/report/: labA.md
lab/LabA_S/scripts/: gen_config.py  run.py  test_asm.py  test_sim.py
lab/LabA_S/scripts/lc3test/: __init__.py  core.py  env.py  models.py  utils.py
lab/LabA_S/src/: main_asm.cpp  main_sim.cpp
lab/LabA_S/src/assembler/: assembler.cpp  assembler.h
lab/LabA_S/src/simulator/: lc3_vm.cpp  lc3_vm.h
lab/LabA_S/test_case/: README.md
lessons/: DS_Ch10-1.ppt  DS_Ch10-2.ppt  第1章 绪论.ppt  第2章 线性表.ppt  第4章 串、数组和广义表.ppt  第5章 树和二叉树.ppt  第6章 图.ppt
temp/code1/: CMakeLists.txt
temp/code1/Src/: main.cpp
